Restaurant Review App

--- a/views/list.hbs
+++ b/views/list.hbs
@@ -3,6 +3,6 @@
 <br>
 <ul>
   {{#each result}}
-      <li>{{name}}</li>
+      <li><a href="/restaurant/{{id}}">{{name}}</a></li>
   {{/each}}
 </ul>
