--- a/views/restaurant.hbs
+++ b/views/restaurant.hbs
@@ -8,6 +8,6 @@
   <br>
   <br>
   {{#each result}}
-      <li>Stars: {{stars}} Title: {{title}} Review: {{review}} Reviewer Name: {{reviewer_name}} Reviewer Email: {{email}}</li>
+      <li><b>Stars: </b>{{stars}} <b>Title: </b>{{title}} <b>Review: </b>{{review}} <b>Reviewer Name: </b>{{reviewer_name}} <b>Reviewer Email: </b>{{email}}</li>
   {{/each}}
 </form>
