--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
 <form action="/search" method="GET">
-  <input type="text" name="searchcriteria" placeholder="Search for a restaurant"><br>
+  <b>Search for a restaurant:</b>
+  <br><br>
+  <input type="text" name="searchcriteria" placeholder="Enter search criteria"><br>
   <br>
   <button type="submit">Submit</button>
 </form>
