--- a/views/addreview.hbs
+++ b/views/addreview.hbs
@@ -1,5 +1,6 @@
 <form action="/addreview" method="POST">
-  <input type="hidden" name="id" value={{id}}>
+  <input type="hidden" name="id" value="{{id}}">
+  <h1> ID: {{id}}</h1>
   <b>Title:</b>
   <br>
   <input type="text" name="review_title" placeholder="Title"><br><br>
