--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,6 @@
 <form action="/search" method="GET">
+  <b>Hi {{login_name}}!</b>
+  <br><br>
   <b>Search for a restaurant:</b>
   <br><br>
   <input type="text" name="searchcriteria" placeholder="Enter search criteria"><br>
