--- a/views/restaurant.hbs
+++ b/views/restaurant.hbs
@@ -1,6 +1,7 @@
 <form action="/addreview" method="GET">
   <input type="hidden" name="id" value={{results.[0].id}}>
-  <h1> ID: {{results.[0].id}}</h1>
+  <b>Hi {{login_name}}!</b>
+  <br><br>
   <h2>Restaurant Details:</h2>
   <p>Name: {{results.[0].name}}</p>
   <p>Address: {{results.[0].address}}</p>
