Refactor app.js

--- a/views/addrestaurant.hbs
+++ b/views/addrestaurant.hbs
@@ -1,4 +1,6 @@
 <form action="/restaurant/submit_new" method="POST">
+  <b>Hi {{login_name}}!</b>
+  <br><br>
   <b>Name of restaurant:</b>
   <br>
   <input type="text" name="restaurant_name" placeholder="Restaurant name"><br><br>
