--- a/views/addrestaurant.hbs
+++ b/views/addrestaurant.hbs
@@ -1,6 +1,7 @@
 <form action="/restaurant/submit_new" method="POST">
-  <b>Hi {{login_name}}!</b>
-  <br><br>
+  {{#if login_name}}
+    <div>Hi {{login_name}}!</div>
+  {{/if}}
   <b>Name of restaurant:</b>
   <br>
   <input type="text" name="restaurant_name" placeholder="Restaurant name"><br><br>
