--- a/views/addreview.hbs
+++ b/views/addreview.hbs
@@ -1,7 +1,6 @@
 <form action="/addreview" method="POST">
   <input type="hidden" name="id" value="{{id}}">
-  <b>Hi {{login_name}}!</b>
-  <br><br>
+  <div>Hi {{login_name}}!</div>
   <b>Title:</b>
   <br>
   <input type="text" name="review_title" placeholder="Title"><br><br>
