--- a/views/list.hbs
+++ b/views/list.hbs
@@ -1,5 +1,6 @@
-<b>Hi {{login_name}}!</b>
-<br><br>
+{{#if login_name}}
+  <div>Hi {{login_name}}!</div>
+{{/if}}
 <h2>Here are the restaurant's that match your search criteria:</h2>
 <br>
 <ul>
